--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -106,4 +106,11 @@
     <string name="save_coins_title">Guarda tus monedas</string>
     <string name="save_coins_desc">Tienes que ver un video de anuncio para guardar tus monedas, presiona continuar para ver el video.</string>
     <string name="save_coins_continue">Continuar</string>
+    <string name="coins">Monedas</string>
+    <string name="try_again">Inténtalo de nuevo</string>
+    <string name="spin_win">¡Felicidades! ¡Ganaste %s!</string>
+    <string name="try_again_message">¡Inténtalo de nuevo la próxima vez!</string>
+    <string name="daily_wheel">Rueda de recompensas diaria</string>
+    <string name="spin_the_wheel">Gira la rueda</string>
+    <string name="daily_wheel_once_per_day">¡Solo puedes abrir la rueda diaria una vez al día!</string>
 </resources>
