--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -103,7 +103,7 @@
     <string name="try_again">Riprova</string>
     <string name="spin_win">Congratulazioni! Hai vinto %s!</string>
     <string name="try_again_message">Riprova la prossima volta!</string>
-    <string name="daily_wheel">Ruota delle ricompense giornaliere</string>
+    <string name="daily_wheel">Ruota delle ricompense</string>
     <string name="spin_the_wheel">Gira la ruota</string>
     <string name="daily_wheel_once_per_day">Puoi aprire la ruota giornaliera solo una volta al giorno!</string>
 </resources>
