--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -31,7 +31,7 @@
     <string name="delivery">送金: １－２日間</string>
     <string name="price">値段: %d コイン</string>
     <string name="redeem">引き換え</string>
-    <string name="guide">このガイドに従ってRobuxを引き換える手順をご確認ください：\n\n１）Robloxにログイン：Robloxのユーザー名とパスワードを使用してログインします。\n\n２）"制作"に移動：上部の「制作」ボタンをクリックします。\n\n３）ゲームを開く：ゲームパスを追加するゲームを選択します。\n\n４）ゲームパスを追加：「関連アイテム」をクリックし、"パス"を選択してゲームパスを追加します。\n\n５）ゲームパスを編集：名前と説明を付けます。\n\n６）価格を設定：価格を%d Robuxに設定します。\n\n７）保存：ゲームパスを保存し、ゲームパスの「…」ボタンをクリックしてリンクをコピーします。\n\n８）リンクを貼り付け：下記の場所にリンクを貼り付けて完了です。</string>
+    <string name="guide">このガイドに従ってRobuxを引き換える手順をご確認ください：\n\n１）Robloxにログイン：Robloxのユーザー名とパスワードを使用してログインします。\n\n２）"制作"に移動：上部の「制作」ボタンをクリックします。\n\n３）ゲームを開く：ゲームパスを追加するゲームを選択します。\n\n４）ゲームパスを追加：「関連アイテム」をクリックし、"パス"を選択してゲームパスを追加します。\n\n５）ゲームパスを編集：名前と説明を付けます。\n\n６）価格を設定：価格を%d Robuxに設定します。\n\n７）保存：ゲームパスを保存し、ゲームパスの「…」ボタンをクリックしてリンクをコピーします。\n\n８） 5つ星レビュー Google Playで5つ星レビューをお願いします！\n\n９）リンクを貼り付け：下記の場所にリンクを貼り付けて完了です。</string>
     <string name="gamepass_url">パスのURLをここに入力してください</string>
     <string name="not_enough">コインは不足しています :(</string>
     <string name="confirmation">確認</string>
