--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -102,7 +102,7 @@
     <string name="logo">Logo</string>
     <string name="close">Cerrar</string>
     <string name="review">Calificar</string>
-    <string name="review_message">¡Ayúdanos a mejorar nuestra app calificándonos con 5 estrellas en Play Store! A cambio, ¡recibirás 350 monedas!</string>
+    <string name="review_message">¡Para mejorar nuestra app y recompensar tu apoyo, califícanos con 5 estrellas en la Play Store! Después de enviar tu reseña, envía una captura de pantalla de tu calificación de 5 estrellas a info@robuxrush.com y recibirás 600 monedas como agradecimiento por tus comentarios. ¡Tu opinión es invaluable para ayudarnos a mejorar!</string>
     <string name="save_coins_title">Guarda tus monedas</string>
     <string name="save_coins_desc">Tienes que ver un video de anuncio para guardar tus monedas, presiona continuar para ver el video.</string>
     <string name="save_coins_continue">Continuar</string>
@@ -113,4 +113,6 @@
     <string name="daily_wheel">Rueda de recompensas diaria</string>
     <string name="spin_the_wheel">Gira la rueda</string>
     <string name="daily_wheel_once_per_day">¡Solo puedes abrir la rueda diaria una vez al día!</string>
+    <string name="redeem_title">Canje de Robux</string>
+    <string name="redeem_desc">¡Has canjeado tus Robux con éxito! 🎉 ¡Por favor, déjanos una reseña de 5 estrellas! 🌟</string>
 </resources>
