--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -115,4 +115,5 @@
     <string name="male">Maschio</string>
     <string name="female">Femmina</string>
     <string name="other">Altro</string>
+    <string name="please_select_an_offerwall">Si prega di selezionare un offerwall</string>
 </resources>
