--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -119,5 +119,6 @@
     <string name="male">Masculino</string>
     <string name="female">Feminino</string>
     <string name="other">Outro</string>
+    <string name="please_select_an_offerwall">Por favor, selecione uma offerwall</string>
 </resources>
 
