--- a/app/src/main/assets/i18n/RE_it.properties
+++ b/app/src/main/assets/i18n/RE_it.properties
@@ -7,4 +7,4 @@
 coins=Monete: {0}
 difficulty=Difficoltà: {0}
 time=Tempo: {0}
-win=Hai guadagnato {0,number} monete!
+win=Hai guadagnato {0} monete!
